Fix artist header artist text alignment

--- a/ontour/src/index.css
+++ b/ontour/src/index.css
@@ -80,7 +80,6 @@ h4 {
   #artist-name {
     margin: 0 auto !important;
     width: 150%;
-    text-align: left;
   }
 
   .carousel-control-prev{
@@ -496,6 +495,7 @@ h4 {
 
 #artist-name {
   font-size: 6.5vh;
+  padding-left: 5px;
 }
 
 /* Results */
